argocd/manifests/smokeping/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smokeping
  labels:
    app.kubernetes.io/name: smokeping
    app.kubernetes.io/managed-by: argocd
