argocd/manifests/smokeping/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smokeping
  namespace: smokeping
  labels:
    app: smokeping
    app.kubernetes.io/name: smokeping
spec:
  type: ClusterIP
  selector:
    app: smokeping
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
